<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">NMedia</string>
    <string name="greeting">Hello! This is NMedia!</string>
    <string name="avatar_description">Avatar</string>
    <string name="posts_menu_description">Post\'s menu</string>
    <string name="like_button_description">Like</string>
    <string name="comment_button_description">Comments</string>
    <string name="share_button_description">Share</string>
    <string name="views_image_description">Views</string>
    <string name="default_pattern" translatable="false">%s</string>
    <string name="thousands_pattern" translatable="false">%sK</string>
    <string name="millions_pattern" translatable="false">%sM</string>
    <string name="remove_post_option">Remove</string>
    <string name="post_hint">Enter the text…</string>
    <string name="publish_post">Publish the post</string>
    <string name="edit_post_options">Edit</string>
    <string name="cancel_editing">Cancel editing</string>
    <string name="editing_mode_text">Editing:</string>
    <string name="chooser_share_post">Share post</string>
    <string name="description_post_save">Save</string>
    <string name="post_add_hint">Post content</string>
    <string name="add_post">Add post</string>
    <string name="snack_bar">WOW! Snackbar!</string>
    <string name="add_post_title">Add post</string>
    <string name="edit_post_title">Edit post</string>
    <string name="play_video">Play video</string>
    <string name="edit_link_hint">You can attach a link to the video</string>
    <string name="close">Close</string>
    <string name="to_text">To text</string>
    <string name="to_link">To link</string>
    <string name="channel_remote_name">Server notifications</string>
    <string name="channel_remote_description">Notifications from remote server</string>
    <string name="notification_user_liked">User %1$s liked %2$s\'s post</string>
    <string name="notification_user_new_post">%1$s has published new post:</string>
</resources>